Fixed header alignment and adjusted hover state

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -3,19 +3,27 @@
 }
 
 .row {
-  display: grid;
-  grid-template-columns: 2.5fr 1.5fr;
-  gap: 40px;
+display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 60px;
+  align-items: start;
+
+  width:fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .leftcolumn{
   float: none;
   height: 750px;
+  width: fit-content;
 
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior:smooth;
   padding-top:80px;
+  padding-left: 20px;
+  padding-right: 20px;
 
   background-image: linear-gradient(to bottom, #1c204d3a, #1c204d00, #1c204d3a );
 
@@ -37,11 +45,11 @@ body {
 
 /* Header/Blog Title */
 .header {
-  padding: 30px;
   font-size: 40px;
   text-align: left;
-  background: transparent;
-  margin-bottom: 3%;
+
+  width: 100%;
+  margin: 0;
 }
 
 /* Fake image */
@@ -95,7 +103,7 @@ body {
   transform: translateY(-20px);
   filter: drop-shadow(6px 10px 0px #59ffff2f);
   
-  padding-right: 20px;
+  padding-right: 10px;
   padding-top: 25px;
   margin-bottom: 100px;
   width: 100%;
@@ -103,13 +111,12 @@ body {
 
   z-index: 1;
   
-  transition: transform 0.08s ease-in-out, filter 0.08s ease-in-out;
+  transition: transform 0.2s ease-out, filter 0.1s ease-in-out;
 ;
 }
 
 .blogcard:hover {
-  transform: scale(1.001);
-
+  transform: translate(0, -26px) scale(1.001) ;
   filter: drop-shadow(6px 10px 0px #59ffffb0);
 }
 
@@ -151,9 +158,11 @@ body {
 }
 
 .container {
-  max-width: 1200px;
-  width: 95%;
-  margin: 0 auto; /*Center on page*/
+  max-width: 100vw;
+  width: fit-content; 
+    margin-left: auto;
+  margin-right: auto; 
+
 }
 
 h1, h2 {
