--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,9 +13,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  
-  margin: 0 auto;
-
 }
 
 a {
@@ -29,7 +26,7 @@ a:hover {
 
 body {
   margin: 0;
-  min-width: 100vw;
+  min-width: 320px;
   min-height: 100vh;
 }
 
